# HoverNet_TCAV

./: .gitignore  =2.20.0  LICENSE  Makefile  NSCLC_DATASET_MIGRATION.md  PHASE1_TEST_EVIDENCE.md  PROTOTYPE_IMPLEMENTATION_PLAN.md  QUICK_START.txt  README.md  TEST_RESULTS_PHASE1.txt  pyproject.toml  pytest.ini  requirements.txt  setup.py
.github/workflows/: tests.yml
Codebase/AxioBionics/: .gitignore  README.md
Codebase/AxioBionics/Demo/NP2_demo/: Demo.html
Codebase/AxioBionics/documentation/: CHANGELOG.md  INDEX.md  security-key-management.md
Codebase/AxioBionics/documentation/archive/: ANDROID_QUICKSTART.md  ANDROID_SETUP.md  APPLE_DEVELOPER_SETUP.md  BUILD_STATUS.md  CURRENT_PROGRESS.md  DOCUMENTATION.md  ENVIRONMENT_VERIFIED.md  INSTALLATION_STATUS.md  IOS_REGULATORY_CHECKLIST.md  IOS_RISK_ANALYSIS.md  IOS_SETUP.md  ISSUES.md  PHASE_0_SUMMARY.md  PHASE_1_QUICKSTART.md  QT_ANDROID_NOTES.md  SETUP_COMPLETE.md  SETUP_STATUS.md  SETUP_SUMMARY.md
Codebase/HoverNet/: PROJECT_SETUP_SUMMARY.md  QUICK_START_GUIDE.md  requirements-dev.txt  requirements.txt
Codebase/HoverNet/docs/: TESTING_STRATEGY.md
Research/: Interpretability Strategy for H&E-Based Response Prediction Models (pCR_MPR_EFS).txt
evidence_outputs/: feature_summary.txt  nuclei_features.csv  slide_metrics.json
scripts/: download_nsclc_data.sh  generate_annotated_slides.py  generate_test_evidence.py
src/hovernet_pipeline/: segmentation.py  visualization.py
tests/: conftest.py
tests/unit/: test_tcav_integration.py
tests/validation/: test_success_criteria.py
(+16 files in other folders)
